# aoc-22

./: .gitignore  Cargo.toml
aoc_macro/: Cargo.toml
aoc_macro/src/: lib.rs
src/: days.rs  main.rs
src/days/day1/: mod.rs
src/days/day10/: mod.rs
src/days/day13/: mod.rs
src/days/day14/: mod.rs
src/days/day15/: mod.rs
src/days/day2/: mod.rs
src/days/day3/: mod.rs
src/days/day4/: mod.rs
src/days/day5/: mod.rs
src/days/day6/: mod.rs
src/days/day7/: mod.rs
src/days/day8/: mod.rs
src/days/day9/: mod.rs
src/days/utils/: mod.rs
