[package]
name = "aoc-22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy = "0.0.302"
dotenv = "0.15.0"
itertools = "0.10.5"
regex = "1.7.0"
reqwest = {version = "0.11.13", features=["blocking"]}